--- a/hotels.html
+++ b/hotels.html
@@ -1,216 +1,204 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Лучшие отели южного берега Иссык-Куля 2025</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Лучшие отели • Южный Берег Иссык-Куля • 2025</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600;800&display=swap" rel="stylesheet">
   <style>
-    * { margin:0; padding:0; box-sizing:border-box; }
-    body {
-      font-family: 'Inter', sans-serif;
-      color: #f0f0f0;
-      background: linear-gradient(to bottom, #0a0a0a, #001020);
-      min-height: 100vh;
+    *{margin:0;padding:0;box-sizing:border-box}
+    body{
+      font-family:'Inter',sans-serif;
+      background:#f0f8ff;
+      color:#003366;
+      min-height:100vh;
+      padding-top:80px;
     }
-    /* Кнопка «На главную» */
-    .back-home {
-      position: fixed;
-      top: 20px; left: 20px;
-      background: rgba(0,212,255,0.2);
-      backdrop-filter: blur(12px);
-      color: #fff;
-      padding: 12px 24px;
-      border-radius: 50px;
-      text-decoration: none;
-      font-weight: 600;
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      border: 1px solid rgba(0,212,255,0.5);
-      z-index: 1000;
-      transition: all 0.3s;
+    body::before{
+      content:""; position:fixed; inset:0;
+      background:linear-gradient(to bottom,rgba(240,248,255,0.9),rgba(224,255,255,0.8)),
+      url('https://c8.alamy.com/comp/PT3PMT/beautiful-southern-shore-of-lake-issyk-kul-in-the-summer-day-kyrgyzstan-PT3PMT.jpg') center/cover no-repeat;
+      z-index:-1;
     }
-    .back-home:hover {
-      background: rgba(0,212,255,0.4);
-      transform: translateX(-5px);
-      box-shadow: 0 8px 30px rgba(0,212,255,0.4);
+    .back-btn{
+      position:fixed;
+      top:20px;
+      left:20px;
+      z-index:999;
+      background:#00d4ff;
+      color:#fff;
+      padding:12px 24px;
+      border-radius:50px;
+      font-weight:600;
+      font-size:1rem;
+      text-decoration:none;
+      box-shadow:0 4px 15px rgba(0,212,255,0.4);
+      transition:all .3s;
     }
-    /* Шапка с твоей фоткой */
-    header {
-      height: 100vh;
-      background: url('https://cdn.jsdelivr.net/gh/issykkul-kg/TravelKyrgyzstan@main/issyk-kul.jpg') center/cover no-repeat fixed;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      position: relative;
+    .back-btn:hover{
+      background:#ff8c00;
+      transform:scale(1.05);
+      box-shadow:0 8px 25px rgba(255,140,0,0.4);
     }
-    header::before {
-      content:""; position:absolute; inset:0;
-      background: rgba(0,0,0,0.58);
+    .back-btn::before{content:"← ";font-size:1.3em}
+    header{
+      text-align:center;
+      padding:60px 20px 40px;
     }
-    .header-content {
-      position: relative;
-      z-index: 2;
-      padding: 0 20px;
+    h1{
+      font-size:clamp(3rem,10vw,6rem);
+      color:#ff8c00;
+      text-shadow:0 4px 20px rgba(255,215,0,0.6);
+      margin-bottom:20px;
     }
-    h1 {
-      font-size: clamp(3rem, 10vw, 6.5rem);
-      font-weight: 900;
-      letter-spacing: 6px;
-      color: #ffffff;
-      text-shadow: 0 6px 30px rgba(0,0,0,0.8);
-      margin-bottom: 20px;
+    .container{
+      max-width:1400px;
+      margin:0 auto;
+      padding:40px 20px 80px;
     }
-    /* Основной контент */
-    .container {
-      max-width: 1400px;
-      margin: 0 auto;
-      padding: 120px 20px 100px;
+    h2{
+      text-align:center;
+      color:#006666;
+      font-size:3rem;
+      margin-bottom:60px;
     }
-    h2 {
-      text-align: center;
-      color: #00e5e5;
-      font-size: 3.4rem;
-      margin-bottom: 70px;
-      letter-spacing: 4px;
-      font-weight: 900;
-      text-shadow: 0 4px 20px rgba(0, 229, 229, 0.4);
+    .grid{
+      display:grid;
+      grid-template-columns:repeat(auto-fit,minmax(360px,1fr));
+      gap:40px;
     }
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
-      gap: 40px;
+    .hotel-card{
+      background:rgba(255,255,255,0.85);
+      backdrop-filter:blur(16px);
+      border:1px solid rgba(0,212,255,0.6);
+      border-radius:28px;
+      overflow:hidden;
+      box-shadow:0 15px 40px rgba(0,0,0,0.2);
+      transition:.4s;
     }
-    .hotel-card {
-      background: rgba(25,35,50,0.94);
-      backdrop-filter: blur(16px);
-      border: 1px solid rgba(0,212,255,0.3);
-      border-radius: 28px;
-      overflow: hidden;
-      transition: all 0.5s ease;
-      box-shadow: 0 12px 40px rgba(0,0,0,0.6);
+    .hotel-card:hover{transform:translateY(-12px)}
+    .hotel-card img{
+      width:100%;
+      height:260px;
+      object-fit:cover;
+      transition:transform .6s;
     }
-    .hotel-card:hover {
-      transform: translateY(-20px);
-      border-color: #00ffff;
-      box-shadow: 0 30px 70px rgba(0,212,255,0.45);
+    .hotel-card:hover img{transform:scale(1.1)}
+    .info{
+      padding:28px;
+      text-align:center;
     }
-    .hotel-card img {
-      width: 100%;
-      height: 260px;
-      object-fit: cover;
-      transition: transform 0.6s ease;
+    .info h3{
+      font-size:1.55rem;
+      color:#006666;
+      margin-bottom:12px;
     }
-    .hotel-card:hover img {
-      transform: scale(1.1);
+    .info p{
+      font-size:1.1rem;
+      line-height:1.6;
+      margin-bottom:16px;
+      color:#003366;
     }
-    .info {
-      padding: 28px;
-      text-align: center;
+    .price{
+      display:inline-block;
+      background:#ff8c00;
+      color:#fff;
+      font-weight:900;
+      padding:8px 20px;
+      border-radius:30px;
+      font-size:1.1rem;
+      margin-bottom:20px;
     }
-    .info h3 {
-      font-size: 1.55rem;
-      margin-bottom: 12px;
-      color: #00ffcc;
-      font-weight: 700;
+    .btn{
+      display:inline-block;
+      background:linear-gradient(135deg,#00d4ff,#22d3ee);
+      color:#fff;
+      font-weight:700;
+      padding:14px 32px;
+      border-radius:50px;
+      text-decoration:none;
+      font-size:1.1rem;
+      box-shadow:0 8px 25px rgba(0,212,255,0.4);
+      transition:.3s;
     }
-    .info p {
-      font-size: 1.1rem;
-      line-height: 1.6;
-      opacity: 0.92;
-      margin-bottom: 16px;
+    .btn:hover{background:#ff8c00;transform:scale(1.08)}
+    footer{
+      text-align:center;
+      padding:60px 20px;
+      background:#e0ffff;
+      color:#006666;
+      font-size:0.95rem;
     }
-    .price {
-      display: inline-block;
-      background: linear-gradient(90deg, #00ffff, #00ffcc);
-      color: #000;
-      font-weight: 900;
-      padding: 8px 20px;
-      border-radius: 30px;
-      font-size: 1.1rem;
-      margin-bottom: 20px;
-    }
-    .btn {
-      display: inline-block;
-      background: #25d366;
-      color: white;
-      font-weight: 700;
-      padding: 14px 32px;
-      border-radius: 50px;
-      text-decoration: none;
-      font-size: 1.1rem;
-      box-shadow: 0 8px 25px rgba(37,211,102,0.4);
-      transition: all 0.3s;
-    }
-    .btn:hover {
-      transform: scale(1.08);
-      box-shadow: 0 12px 35px rgba(37,211,102,0.6);
-    }
-    footer {
-      text-align: center;
-      padding: 60px 20px;
-      opacity: 0.8;
-      color: #88e0ff;
-      font-size: 0.95rem;
-    }
-    @media (max-width: 768px) {
-      .grid { grid-template-columns: 1fr; }
-      h2 { font-size: 2.8rem; }
+    @media(max-width:768px){
+      .grid{grid-template-columns:1fr}
     }
   </style>
 </head>
 <body>
+<a href="index.html" class="back-btn">На главную</a>
 
-  <a href="index.html" class="back-home">
-    ← На главную
-  </a>
+<header>
+  <h1>ОТЕЛИ</h1>
+</header>
 
-  <header>
-    <div class="header-content">
-      <h1>ОТЕЛИ</h1>
+<div class="container">
+  <h2>Лучшие отели и апартаменты южного берега 2025</h2>
+  <div class="grid">
+    <div class="hotel-card">
+      <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/10/5f/69/46/bel-tam-seaside-yurt.jpg?w=900&h=500&s=1" alt="Tong Marina Apart-Hotel">
+      <div class="info">
+        <h3>Tong Marina Apart-Hotel</h3>
+        <p>Современные апартаменты • Первая линия • Бассейн • Вид на озеро</p>
+        <div class="price">от 15 000 сом / ночь</div>
+        <a href="https://wa.me/996700123456" class="btn">Забронировать в WhatsApp</a>
+      </div>
     </div>
-  </header>
 
-  <div class="container">
-    <h2>Лучшие отели южного берега 2025</h2>
+    <div class="hotel-card">
+      <img src="https://c8.alamy.com/comp/2AGAC62/lake-issyk-kul-kyrgyzstan-empty-sandy-beach-on-the-southern-shore-of-the-lake-2AGAC62.jpg" alt="Elestet Issyk-Kul">
+      <div class="info">
+        <h3>Elestet Issyk-Kul</h3>
+        <p>Комфортабельный отель • Приватный пляж • Ресторан • Горы</p>
+        <div class="price">от 12 000 сом / ночь</div>
+        <a href="https://wa.me/996555987654" class="btn">Забронировать в WhatsApp</a>
+      </div>
+    </div>
 
-  <div class="hotel-card">
-  <img src="https://cdn.jsdelivr.net/gh/issykkul-kg/TravelKyrgyzstan@main/images/ton-marina.jpg" alt="Тон Марина">
-  <div class="info">
-    <h3>Тон Марина</h3>
-    <p>5★ • Первая линия • СПА • Бассейн • Всё включено</p>
-    <div class="price">от 18 000 сом / ночь</div>
-    <a href="https://wa.me/996700123456" class="btn">Забронировать</a>
+    <div class="hotel-card">
+      <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/10/5f/21/3c/bel-tam-seaside-yurt.jpg?w=700&h=-1&s=1" alt="Bel Tam Seaside Yurt Camp">
+      <div class="info">
+        <h3>Bel Tam Seaside Yurt Camp</h3>
+        <p>Юрточный лагерь • Прямо на пляже • Аутентично • Закаты</p>
+        <div class="price">от 8 000 сом / ночь</div>
+        <a href="https://wa.me/996709100020" class="btn">Забронировать в WhatsApp</a>
+      </div>
+    </div>
+
+    <div class="hotel-card">
+      <img src="https://c8.alamy.com/comp/PT3PMT/beautiful-southern-shore-of-lake-issyk-kul-in-the-summer-day-kyrgyzstan-PT3PMT.jpg" alt="Apricot Guest House">
+      <div class="info">
+        <h3>Apricot Guest House</h3>
+        <p>Уютный гостевой дом • Семейный • Близко к Боконбаево</p>
+        <div class="price">от 6 000 сом / ночь</div>
+        <a href="https://wa.me/996702703456" class="btn">Забронировать в WhatsApp</a>
+      </div>
+    </div>
+
+    <div class="hotel-card">
+      <img src="https://www.shutterstock.com/image-photo/beautiful-southern-shore-lake-issykkul-260nw-496493437.jpg" alt="Almaluu Yurt Camp">
+      <div class="info">
+        <h3>Almaluu Yurt Camp</h3>
+        <p>Традиционные юрты • Природа • Конные прогулки</p>
+        <div class="price">от 7 500 сом / ночь</div>
+        <a href="https://wa.me/996777123456" class="btn">Забронировать в WhatsApp</a>
+      </div>
+    </div>
   </div>
 </div>
 
-      <div class="hotel-card">
-        <img src="https://images.unsplash.com/photo-1564501049412-61c2a3083791?w=1200&auto=format&fit=crop&q=80" alt="Кекилик 1">
-        <div class="info">
-          <h3>Кекилик 1</h3>
-          <p>4★ • Собственный пляж • Ресторан • Баня</p>
-          <div class="price">от 11 000 сом / ночь</div>
-          <a href="https://wa.me/996999123456" class="btn">Забронировать</a>
-        </div>
-      </div>
-
-      <div class="hotel-card">
-        <img src="https://images.unsplash.com/photo-1571896349842-33c89424de2d?w=1200&auto=format&fit=crop&q=80" alt="Элестет">
-        <div class="info">
-          <h3>Элестет</h3>
-          <p>Современный отель • Бассейн • Вид на горы</p>
-          <div class="price">от 9 500 сом / ночь</div>
-          <a href="https://wa.me/996555123456" class="btn">Забронировать</a>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <footer>
-    © 2025 Южный Берег Иссык-Куля · Боконбаево и окрестности
-  </footer>
+<footer>
+  © 2025 Южный Берег Иссык-Куля · Боконбаево и окрестности<br>
+  +996 709 100 020 · +996 702 703 456
+</footer>
 </body>
 </html>
