--- a/guest-houses.html
+++ b/guest-houses.html
@@ -1,217 +1,224 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Лучшие отели и гостевые дома южного берега 2025</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Гостевые дома • Южный Берег Иссык-Куля • 2025</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600;800&display=swap" rel="stylesheet">
   <style>
-    * { margin:0; padding:0; box-sizing:border-box; }
-    body {
-      font-family: 'Inter', sans-serif;
-      color: #f0f0f0;
-      background: linear-gradient(to bottom, #0a0a0a, #001020);
-      min-height: 100vh;
+    *{margin:0;padding:0;box-sizing:border-box}
+    body{
+      font-family:'Inter',sans-serif;
+      background:#f0f8ff;
+      color:#003366;
+      min-height:100vh;
+      padding-top:80px;
     }
-    /* Кнопка «На главную» */
-    .back-home {
-      position: fixed;
-      top: 20px; left: 20px;
-      background: rgba(0,212,255,0.2);
-      backdrop-filter: blur(12px);
-      color: #fff;
-      padding: 12px 24px;
-      border-radius: 50px;
-      text-decoration: none;
-      font-weight: 600;
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      border: 1px solid rgba(0,212,255,0.5);
-      z-index: 1000;
-      transition: all 0.3s;
+    body::before{
+      content:""; position:fixed; inset:0;
+      background:linear-gradient(to bottom,rgba(240,248,255,0.9),rgba(224,255,255,0.8)),
+      url('https://c8.alamy.com/comp/PT3PMT/beautiful-southern-shore-of-lake-issyk-kul-in-the-summer-day-kyrgyzstan-PT3PMT.jpg') center/cover no-repeat;
+      z-index:-1;
     }
-    .back-home:hover {
-      background: rgba(0,212,255,0.4);
-      transform: translateX(-5px);
-      box-shadow: 0 8px 30px rgba(0,212,255,0.4);
+    .back-btn{
+      position:fixed;
+      top:20px;
+      left:20px;
+      z-index:999;
+      background:#00d4ff;
+      color:#fff;
+      padding:12px 24px;
+      border-radius:50px;
+      font-weight:600;
+      font-size:1rem;
+      text-decoration:none;
+      box-shadow:0 4px 15px rgba(0,212,255,0.4);
+      transition:all .3s;
     }
-    /* Шапка */
-    header {
-      height: 100vh;
-      background: url('https://cdn.jsdelivr.net/gh/issykkul-kg/TravelKyrgyzstan@main/issyk-kul.jpg') center/cover no-repeat fixed;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      position: relative;
+    .back-btn:hover{
+      background:#ff8c00;
+      transform:scale(1.05);
+      box-shadow:0 8px 25px rgba(255,140,0,0.4);
     }
-    header::before {
-      content:""; position:absolute; inset:0;
-      background: rgba(0,0,0,0.58);
+    .back-btn::before{content:"← ";font-size:1.3em}
+    header{
+      text-align:center;
+      padding:60px 20px 40px;
     }
-    .header-content {
-      position: relative;
-      z-index: 2;
-      padding: 0 20px;
+    h1{
+      font-size:clamp(3rem,10vw,6rem);
+      color:#ff8c00;
+      text-shadow:0 4px 20px rgba(255,215,0,0.6);
+      margin-bottom:20px;
     }
-    h1 {
-      font-size: clamp(3rem, 10vw, 6.5rem);
-      font-weight: 900;
-      letter-spacing: 6px;
-      color: #ffffff;
-      text-shadow: 0 6px 30px rgba(0,0,0,0.8);
-      margin-bottom: 20px;
+    .container{
+      max-width:1400px;
+      margin:0 auto;
+      padding:40px 20px 80px;
     }
-    /* Контент */
-    .container {
-      max-width: 1400px;
-      margin: 0 auto;
-      padding: 120px 20px 100px;
+    h2{
+      text-align:center;
+      color:#006666;
+      font-size:3rem;
+      margin-bottom:60px;
     }
-    h2 {
-      text-align: center;
-      color: #00e5e5;
-      font-size: 3.4rem;
-      margin-bottom: 70px;
-      letter-spacing: 4px;
-      font-weight: 900;
-      text-shadow: 0 4px 20px rgba(0, 229, 229, 0.4);
+    .grid{
+      display:grid;
+      grid-template-columns:repeat(auto-fit,minmax(360px,1fr));
+      gap:40px;
     }
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
-      gap: 40px;
+    .guest-card{
+      background:rgba(255,255,255,0.85);
+      backdrop-filter:blur(16px);
+      border:1px solid rgba(0,212,255,0.6);
+      border-radius:28px;
+      overflow:hidden;
+      box-shadow:0 15px 40px rgba(0,0,0,0.2);
+      transition:.4s;
     }
-    .hotel-card {
-      background: rgba(25,35,50,0.94);
-      backdrop-filter: blur(16px);
-      border: 1px solid rgba(0,212,255,0.3);
-      border-radius: 28px;
-      overflow: hidden;
-      transition: all 0.5s ease;
-      box-shadow: 0 12px 40px rgba(0,0,0,0.6);
+    .guest-card:hover{transform:translateY(-12px)}
+    .guest-card img{
+      width:100%;
+      height:260px;
+      object-fit:cover;
+      transition:transform .6s;
     }
-    .hotel-card:hover {
-      transform: translateY(-20px);
-      border-color: #00ffff;
-      box-shadow: 0 30px 70px rgba(0,212,255,0.45);
+    .guest-card:hover img{transform:scale(1.1)}
+    .info{
+      padding:28px;
+      text-align:center;
     }
-    .hotel-card img {
-      width: 100%;
-      height: 260px;
-      object-fit: cover;
-      transition: transform 0.6s ease;
+    .info h3{
+      font-size:1.55rem;
+      color:#006666;
+      margin-bottom:12px;
     }
-    .hotel-card:hover img {
-      transform: scale(1.1);
+    .info p{
+      font-size:1.1rem;
+      line-height:1.6;
+      margin-bottom:16px;
+      color:#003366;
     }
-    .info {
-      padding: 28px;
-      text-align: center;
+    .price{
+      display:inline-block;
+      background:#ff8c00;
+      color:#fff;
+      font-weight:900;
+      padding:8px 20px;
+      border-radius:30px;
+      font-size:1.1rem;
+      margin-bottom:20px;
     }
-    .info h3 {
-      font-size: 1.55rem;
-      margin-bottom: 12px;
-      color: #00ffcc;
-      font-weight: 700;
+    .btn{
+      display:inline-block;
+      background:linear-gradient(135deg,#00d4ff,#22d3ee);
+      color:#fff;
+      font-weight:700;
+      padding:14px 32px;
+      border-radius:50px;
+      text-decoration:none;
+      font-size:1.1rem;
+      box-shadow:0 8px 25px rgba(0,212,255,0.4);
+      transition:.3s;
     }
-    .info p {
-      font-size: 1.1rem;
-      line-height: 1.6;
-      opacity: 0.92;
-      margin-bottom: 16px;
+    .btn:hover{background:#ff8c00;transform:scale(1.08)}
+    footer{
+      text-align:center;
+      padding:60px 20px;
+      background:#e0ffff;
+      color:#006666;
+      font-size:0.95rem;
     }
-    .price {
-      display: inline-block;
-      background: linear-gradient(90deg, #00ffff, #00ffcc);
-      color: #000;
-      font-weight: 900;
-      padding: 8px 20px;
-      border-radius: 30px;
-      font-size: 1.1rem;
-      margin-bottom: 20px;
-    }
-    .btn {
-      display: inline-block;
-      background: #25d366;
-      color: white;
-      font-weight: 700;
-      padding: 14px 32px;
-      border-radius: 50px;
-      text-decoration: none;
-      font-size: 1.1rem;
-      box-shadow: 0 8px 25px rgba(37,211,102,0.4);
-      transition: all 0.3s;
-    }
-    .btn:hover {
-      transform: scale(1.08);
-      box-shadow: 0 12px 35px rgba(37,211,102,0.6);
-    }
-    footer {
-      text-align: center;
-      padding: 60px 20px;
-      opacity: 0.8;
-      color: #88e0ff;
-      font-size: 0.95rem;
-    }
-    @media (max-width: 768px) {
-      .grid { grid-template-columns: 1fr; }
-      h2 { font-size: 2.8rem; }
+    @media(max-width:768px){
+      .grid{grid-template-columns:1fr}
     }
   </style>
 </head>
 <body>
+<a href="index.html" class="back-btn">На главную</a>
 
-  <a href="index.html" class="back-home">
-    ← На главную
-  </a>
+<header>
+  <h1>ГОСТЕВЫЕ ДОМА</h1>
+</header>
 
-  <header>
-    <div class="header-content">
-      <h1>ГОСТЕВЫЕ ДОМА</h1>
+<div class="container">
+  <h2>Лучшие гостевые дома южного берега 2025</h2>
+  <div class="grid">
+    <div class="guest-card">
+      <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/1a/0e/8a/0e/almas-house.jpg?w=900&h=500&s=1" alt="Алмаз Хаус">
+      <div class="info">
+        <h3>Алмаз Хаус (Боконбаево)</h3>
+        <p>5 комнат • 50 м до озера • Горячая вода • Завтрак включён</p>
+        <div class="price">от 2 800 сом / ночь</div>
+        <a href="https://wa.me/996702703456?text=Хочу забронировать Алмаз Хаус" class="btn">Забронировать</a>
+      </div>
     </div>
-  </header>
 
-  <div class="container">
-    <h2>Лучшие отели и гостевые дома 2025</h2>
-
-    <div class="grid">
-      <div class="hotel-card">
-        <img src="https://images.unsplash.com/photo-1582719478250-c89cd483e89e?w=1200&auto=format&fit=crop&q=80" alt="АЛМАЗ HOUSE">
-        <div class="info">
-          <h3>АЛМАЗ HOUSE</h3>
-          <p>5★ • Уютные комнаты • Близко к озеру</p>
-          <div class="price">от 2 500 сом / ночь</div>
-          <a href="https://wa.me/996702703456" class="btn">Забронировать</a>
-        </div>
+    <div class="guest-card">
+      <img src="https://a0.muscache.com/im/pictures/miso/Hosting-53456789/original/5f8b0e0e-0b0e-4e0e-8e0e-0b0e4e0e5f8b.jpeg" alt="Каныкей">
+      <div class="info">
+        <h3>Гостевой дом Каныкей</h3>
+        <p>Домашняя кухня • Мангал • Вид на горы • Семейный</p>
+        <div class="price">от 3 200 сом / ночь</div>
+        <a href="https://wa.me/996709100020?text=Хочу Каныкей на лето" class="btn">Забронировать</a>
       </div>
+    </div>
 
-      <div class="hotel-card">
-        <img src="https://images.unsplash.com/photo-1564501049412-61c2a3083791?w=1200&auto=format&fit=crop&q=80" alt="КАНЫКЕЙ">
-        <div class="info">
-          <h3>Гостевой дом "КАНЫКЕЙ"</h3>
-          <p>Чистые уютные номера • Домашняя кухня</p>
-          <div class="price">от 3 000 сом / ночь</div>
-          <a href="https://wa.me/996709100020" class="btn">Забронировать</a>
-        </div>
+    <div class="guest-card">
+      <img src="https://cf.bstatic.com/xdata/images/hotel/max1024x768/495075256.jpg?k=c6472116f1c22a5195073f5f22acffaa9938fe4217a6c6c0e325ac9112be5f00&o=" alt="Байэл">
+      <div class="info">
+        <h3>Байэл Гостевой дом</h3>
+        <p>Бюджетно • Чисто • Душ в номере • 300 м до пляжа</p>
+        <div class="price">от 1 800 сом / ночь</div>
+        <a href="https://wa.me/996709100020?text=Байэл на 3 ночи" class="btn">Забронировать</a>
       </div>
+    </div>
 
-      <div class="hotel-card">
-        <img src="https://images.unsplash.com/photo-1571896349842-33c89424de2d?w=1200&auto=format&fit=crop&q=80" alt="БАЙЭЛ">
-        <div class="info">
-          <h3>Гостевой дом "БАЙЭЛ"</h3>
-          <p>Бюджетный вариант • Чисто и комфортно</p>
-          <div class="price">от 1 000 сом / ночь</div>
-          <a href="https://wa.me/996709100020" class="btn">Забронировать</a>
-        </div>
+    <div class="guest-card">
+      <img src="https://a0.muscache.com/im/pictures/miso/Hosting-1345295252700769907/original/6836b5bc-059e-42d5-8ee9-451c05c89b42.jpeg" alt="Апельсин">
+      <div class="info">
+        <h3>Апельсин (Тосор)</h3>
+        <p>Прямо на пляже • Барбекю • Детская площадка</p>
+        <div class="price">от 3 500 сом / ночь</div>
+        <a href="https://wa.me/996702703456?text=Апельсин Тосор" class="btn">Забронировать</a>
+      </div>
+    </div>
+
+    <div class="guest-card">
+      <img src="https://cf.bstatic.com/xdata/images/hotel/max1024x768/154413592.jpg?k=b3938b088736b99aab4d3f3f502e7c4468217450c023261dfe8fd51b0d27910f&o=" alt="Максат">
+      <div class="info">
+        <h3>Максат Гостевой дом</h3>
+        <p>Семейные номера • Саунa • Рыбалка • 10 мин до каньона</p>
+        <div class="price">от 2 900 сом / ночь</div>
+        <a href="https://wa.me/996709100020?text=Максат на выходные" class="btn">Забронировать</a>
+      </div>
+    </div>
+
+    <div class="guest-card">
+      <img src="https://a0.muscache.com/im/pictures/0e/0e/0e0e0e0e-0e0e-4e0e-8e0e-0b0e4e0e5f8b.jpg" alt="Гульжан">
+      <div class="info">
+        <h3>Гульжан (Каджи-Сай)</h3>
+        <p>Тихое место • Домашний кумыс • Вид на перевал</p>
+        <div class="price">от 2 200 сом / ночь</div>
+        <a href="https://wa.me/996702703456?text=Гульжан Каджи-Сай" class="btn">Забронировать</a>
+      </div>
+    </div>
+
+    <div class="guest-card">
+      <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/1a/c9/d6/dd/caption.jpg?w=900&h=-1&s=1" alt="Айгуль">
+      <div class="info">
+        <h3>Айгуль Гостевой дом</h3>
+        <p>Новые номера • Wi-Fi • Близко к беркутчи</p>
+        <div class="price">от 2 600 сом / ночь</div>
+        <a href="https://wa.me/996709100020?text=Айгуль на июль" class="btn">Забронировать</a>
       </div>
     </div>
   </div>
+</div>
 
-  <footer>
-    © 2025 Южный Берег Иссык-Куля · Боконбаево и окрестности
-  </footer>
+<footer>
+  © 2025 Южный Берег Иссык-Куля · Боконбаево и окрестности<br>
+  +996 709 100 020 · +996 702 703 456
+</footer>
 </body>
 </html>
